--- a/yml-db/federationfdn.yml
+++ b/yml-db/federationfdn.yml
@@ -9,3 +9,5 @@ mastodonUrls:
   - https://mastodon.xyz/@federationfdn
 twitterUrls:
   - https://twitter.com/federationfdn
+runBy:
+  - https://www.fdn.fr/
