--- a/yml-db/framasoft.yml
+++ b/yml-db/framasoft.yml
@@ -7,3 +7,7 @@ lang:
   - en
 mastodonUrls:
   - https://framapiaf.org/@Framasoft
+twitterUrls:
+  - https://twitter.com/framasoft
+runBy:
+  - https://framasoft.org/
