--- a/yml-db/yunohost.yml
+++ b/yml-db/yunohost.yml
@@ -9,3 +9,5 @@ mastodonUrls:
   - https://mastodon.social/@yunohost
 twitterUrls:
   - https://twitter.com/yunohost
+runBy:
+  - https://yunohost.org/#/
