Correction de ma propre entrée
Je n'ai pas indiqué mes nom et prénom complets sur Mastodon. Merci de respecter cela.

--- a/yml-db/maliciarogue.yml
+++ b/yml-db/maliciarogue.yml
@@ -1,5 +1,5 @@
 ---
-name: Rayna Stamboliyska
+name: R
 description: "I troll, therefore I am. Writer; OSINT & sec analyst; I do risk & crisis mngmnt so u don't have to.Polylingual bookworm. I toot 4 chocolate /!\Parental advisory"
 bot: false
 lang:
